@@ -16,17 +16,17 @@ env-parser-talk
 		[X] Example module
 			[X] Don't include it in cabal and it won't get distributed
 			[X] Stub out just enough of the type information of the module that the example compiles
-		[_] Add function and type documentation
-		[_] Build our own Monad
+		[X] Add function and type documentation
+		[X] Build our own Monad
 			Run command drives semantics of our monad
 			; runParser :: Parser a -> IO a
 			Read an environment in a subset of the IO monad
 			"Run" it
-		[_] stylish-haskell
+		[X] stylish-haskell
 			like `go fmt`
-		[_] Type-check
-		[_] Compile
-		[_] CLI test
+		[X] Type-check
+		[X] Compile
+		[X] CLI test
 	Testing
 		[_] Dev-dependencies
 			sandbox
