@@ -1,3 +1,4 @@
+{-# LANGUAGE GeneralizedNewtypeDeriving #-}
 
 -- |
 -- Module      :  System.Environment.Parser
@@ -10,12 +11,14 @@
 
 module System.Environment.Parser where
 
+import           System.Environment
+
 -- | The 'Parser' type is an effectual context where you can use ENV
 -- information to build a value containing configuration information.
-data Parser a
-instance Monad Parser
+newtype Parser a = Parser { parse :: IO a }
+  deriving ( Functor, Monad )
 
 -- | Look up a key in the ENV. This operation may fail if the key is
 -- missing.
 get :: String -> Parser String
-get = undefined
+get s = Parser (getEnv s)
